fixes bug not responsive on ios 100vw

--- a/src/components/about/style.css
+++ b/src/components/about/style.css
@@ -56,6 +56,22 @@
 @media screen and (max-width: 575px) {
   #aboutSection {
   }
+
+  #introContainer {
+    width: 100vw;
+  }
+
+  #aboutSectionLeft {
+    width: 0px;
+  }
+
+  #aboutSectionRight {
+    width: 100vw;
+  }
+
+  .aboutContent {
+    padding-inline: 20px;
+  }
 }
 
 @media screen and (min-width: 576px) and (max-width: 730px) {
