--- a/src/components/navbar/style.css
+++ b/src/components/navbar/style.css
@@ -58,9 +58,9 @@ a:hover {
 
   #navbarMenu {
     width: 100vw;
-    display: flex;
-    justify-content: center;
     order: 1;
+    display: flex;
+    justify-content: space-evenly;
   }
 
   #myLogo {
@@ -75,7 +75,7 @@ a:hover {
   #navbarMenu span {
     font-size: 15px;
     margin-left: 0;
-    margin-right: 25px;
+    /* margin-right: 25px; */
     z-index: 2;
   }
 
@@ -106,7 +106,7 @@ a:hover {
   }
 
   #flowerContainer {
-    top: 385px;
+    top: 370px;
   }
 
   .secondShelf {
